-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, jfx12
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229429 | jfx11.0.4 | Kevin Rushforth | P2 | Closed | Fixed | |
| JDK-8219884 | 8u231 | Kevin Rushforth | P2 | Resolved | Fixed | b01 |
| JDK-8222201 | 8u221 | Kevin Rushforth | P2 | Closed | Fixed | b02 |
We currently use OpenGL Headers version 4.3 from Khronos. We should update to the latest stable version, which is 4.6.
- backported by
-
JDK-8219884 Update OpenGL Headers to version 4.6
-
- Resolved
-
-
JDK-8222201 Update OpenGL Headers to version 4.6
-
- Closed
-
-
JDK-8229429 Update OpenGL Headers to version 4.6
-
- Closed
-
- is cloned by
-
JDK-8231629 Update OpenGL Headers to version 4.6
-
- Closed
-
- relates to
-
JDK-8218174 Add missing license file for Mesa header files
-
- Resolved
-
- links to
(1 links to)