8219008: Update OpenGL Headers to version 4.6

Reviewed-by: jvos, arapte